Navbar overflow fixed for smaller devices.

--- a/styles/navbarStyles/navbar.module.css
+++ b/styles/navbarStyles/navbar.module.css
@@ -21,5 +21,7 @@
 @media screen and (max-width: 520px) {
   .navbar {
     justify-content: space-between;
+    overflow-x: scroll;
+    overflow-y: hidden;
   }
 }
